refactored lots of code, wrote new code, and added some notes and diagrams

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+# Spring properties
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+
+# Application properties
+cookie.name=sessionId
+setting.model.name=settingModel
+problem.number.type=number
+problem.fraction.type=fraction
