--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
 			<artifactId>MathProblemGenerator</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
